# SpotiFlyer

./: .gitignore  .gitmodules  Aaa  CONTRIBUTING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  gradlew.bash  index.html  settings.gradle  settings.gradle.kts  spotify  styles.css  unable to download any songs from spotify on windows 10  web-app.js
.github/: FUNDING.yml  dependabot.yml
android/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: main.cpp
android/src/main/java/com/shabinder/android/: App.kt  MainActivity.kt  SharedViewModel.kt
android/src/main/java/com/shabinder/android/di/: AppModule.kt
android/src/main/java/com/shabinder/android/navigation/: ComposeNavigation.kt
android/src/main/java/com/shabinder/android/utils/: UtilFunctions.kt
android/src/main/java/com/shabinder/android/worker/: ForegroundService.kt
android/src/main/java/com/shabinder/spotiflyer/: App.kt  MainActivity.kt
android/src/main/java/com/shabinder/spotiflyer/di/: AppModule.kt
android/src/main/java/com/shabinder/spotiflyer/ffmpeg/: FFmpeg.kt
android/src/main/java/com/shabinder/spotiflyer/service/: ForegroundService.kt  Message.kt  TrackStatusFlowMap.kt  Utils.kt
android/src/main/java/com/shabinder/spotiflyer/ui/: AnalyticsDialog.kt  NetworkDialog.kt  PermissionDialog.kt  SplashScreenActivity.kt
android/src/main/java/com/shabinder/spotiflyer/utils/: NetworkDialog.kt  SignatureVerification.kt  UtilFunctions.kt
android/src/main/java/com/shabinder/spotiflyer/utils/autoclear/: AutoClear.kt  AutoClearFragment.kt  LifecycleAutoInitializer.kt
android/src/main/java/com/shabinder/spotiflyer/utils/autoclear/lifecycleobservers/: LifecycleCreateAndDestroyObserver.kt  LifecycleResumeAndPauseObserver.kt  LifecycleStartAndStopObserver.kt
android/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash.xml
android/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/src/main/res/values/: res.xml  strings.xml  themes.xml
app/: build.gradle  proguard-rules.pro
buildSrc/: build.gradle.kts  deps.versions.toml  settings.gradle.kts
console-app/: build.gradle.kts
desktop/: build.gradle.kts
fastlane/: Appfile  Fastfile
ffmpeg/: copy-ffmpeg-executables.sh
ffmpeg/ffmpeg-kit-android-lib/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
ffmpeg/ffmpeg-kit-android-lib/src/main/: AndroidManifest.xml
ffmpeg/ffmpeg-kit-android-lib/src/main/cpp/: .gitignore  doc_examples_transcode_aac.c
ffmpeg/ffmpeg-kit-android-lib/src/main/java/com/shabinder/spotiflyer/ffmpeg/: AndroidFFmpeg.kt
fuzzywuzzy/: README.md  build.gradle  gradle.properties  gradlew  settings.gradle
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
maintenance-tasks/: build.gradle.kts
mobile-ffmpeg/: build.gradle
mosaic/: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle  dependencies.gradle  settings.gradle  update-example-svgs.sh
scripts/: build-ffmpeg.sh
translations/: String_bn.properties  String_sl.properties  Strings_ZH-HK.properties  Strings_al.properties  Strings_ar.properties  Strings_ar.properties.xml  Strings_az.properties  Strings_be.properties.xml  Strings_bn.properties  Strings_bn.properties.xml  Strings_ca.properties.xml  (+53 more)
(+1441 files in other folders)
